<?xml version="1.0"?>
<package>
  <name>hexaplus_tutorial</name>
  <version>0.0.1</version>
  <description>The hexaplus_tutorial package is a tutorial to control a hexacopter via ROS and VREP, using fuzzy controles</description>

  <maintainer email="ekosky@gmail.com">Emanoel Koslosky</maintainer>
  <license>BSD</license>

  <author email="ekosky@gmail.com">Emanoel Koslosky</author>
  <author email="andreoliveira@utfpr.edu.br">Prof. Dr. André Schneider de Oliveira</author>
  <author email="wehrmeister@utfpr.edu.br">Prof. Dr. Marco Aurélio Wehrmeister</author>
  <author email="fabro@utfpr.edu.br">Prof. Dr. João Alberto Fabro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
